# QuickNotes

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  flake.nix
.cache/clangd/index/: AST.hpp.AA7A4C4D11416E44.idx  AST.hpp.C7E9CFC82315BEA2.idx  AbstractState.hpp.22BB58521DB7A1AB.idx  AbstractState.hpp.2B60A278F5371A44.idx  AddNoteWidget.cpp.0BD3756B07991973.idx  AddNoteWidget.hpp.C7E1D82A3D170132.idx  App.cpp.32CE78242894B878.idx  App.cpp.96BB29AB180C0C02.idx  App.hpp.0A728CEE65EBCC1F.idx  App.hpp.8B8CDA605C1450F8.idx  Colors.cpp.57A638304ABB8A9E.idx  Colors.cpp.7564239D0A99BE5C.idx  Colors.hpp.8C13C174DD0BD55B.idx  Colors.hpp.B88D6C4F541B71FD.idx  Config.hpp.9EC6DBB181CC3BA0.idx  Config.hpp.C5BE288BC14A0429.idx  ConfigLoader.cpp.51BBDDE0A86B1990.idx  ConfigLoader.cpp.63A52EBD72FE3EFD.idx  ConfigLoader.hpp.52B9AEFE9CE7AF16.idx  ConfigLoader.hpp.B19F89207AE58E1A.idx  Controller.hpp.AF609CEBACE8B142.idx  Database.cpp.B71D40F9F7BC6F1D.idx  Database.hpp.AFCF42CA93B6A891.idx  DeleteConfirmWidget.cpp.5B99C4A2837FEBB2.idx  DeleteConfirmWidget.hpp.5938F8BF28F1BD9C.idx  DeleteNoteState.cpp.AEEF679C0B63CA65.idx  DeleteNoteState.hpp.513A9350388E52DB.idx  Editor.cpp.0C15FB2C4FA0E7DD.idx  Editor.hpp.2A7C9913421C9EFB.idx  Lexer.cpp.9ADEDCE0F7CA57BF.idx  Lexer.cpp.B1CEDAA043608421.idx  Lexer.hpp.9273FEA59A078B88.idx  Lexer.hpp.D1F418FDAE6DA2DB.idx  MainMenu.cpp.AFBE4426CEDCB38E.idx  MainMenu.cpp.F9E14AB37FC43C7E.idx  MainMenu.hpp.76048E1A916DD292.idx  MainMenu.hpp.99D7B227C7FA9C7F.idx  MainMenuState.cpp.4A1E7719B9F47028.idx  MainMenuState.cpp.D4B0B3B8FC76FFC8.idx  MainMenuState.hpp.6A6D3DAB4C1D839B.idx  (+36 more)
QuickNotes/: Boom.md  SUCCESS.md
docs/: design.md
include/: options.h
src/: main.c  main.cpp  options.c
src/app/: App.cpp  App.hpp  Controller.hpp
src/app/state/: AbstractState.hpp  DeleteNoteState.cpp  DeleteNoteState.hpp  MainMenuState.cpp  MainMenuState.hpp  NewNoteState.cpp  NewNoteState.hpp  NoteAwareState.hpp  NoteListState.cpp  NoteListState.hpp  RenameNoteState.cpp  RenameNoteState.hpp  SearchingState.cpp  SearchingState.hpp  StateUtils.hpp  ViewingState.cpp  ViewingState.hpp
src/config/: Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp  Editor.cpp  Editor.hpp
src/db/: Database.cpp  Database.hpp  INoteRepository.hpp  NoteRepository.cpp  NoteRepository.hpp
src/markdown/: AST.hpp  Colors.cpp  Colors.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Renderer.cpp  Renderer.hpp
src/models/: Notes.hpp
src/ui/: AddNoteWidget.cpp  AddNoteWidget.hpp  DeleteConfirmWidget.cpp  DeleteConfirmWidget.hpp  DialogBox.cpp  DialogBox.hpp  MainMenu.cpp  MainMenu.hpp  NoteCard.cpp  NoteCard.hpp  NoteContainer.cpp  NoteContainer.hpp  NoteListWidget.cpp  NoteListWidget.hpp  NoteViewWidget.cpp  NoteViewWidget.hpp  PreviewWidget.cpp  PreviewWidget.hpp  RenameNoteWidget.cpp  RenameNoteWidget.hpp  SearchBar.cpp  SearchBar.hpp  StatusBar.cpp  StatusBar.hpp  Subwindow.hpp  Widget.hpp
src/utils/: Log.hpp
tests/: CMakeLists.txt  lexer_tests.cpp  notes_repository_tests.cpp  parser_tests.cpp
